--- a/package.json
+++ b/package.json
@@ -29,12 +29,12 @@
     "electron-vite": "^2.2.0",
     "eslint": "^8.57.0",
     "prettier": "^3.2.5",
-    "typescript": "^5.4.5"
+    "typescript": "^5.4.5",
+    "7zip-bin": "^5.2.0"
   },
   "author": "mindes",
   "license": "MIT",
   "dependencies": {
-    "7zip-bin": "^5.2.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
   }
